Tooltip: Disable background-images in IE6 on tooltip element to avoid cursor flickering during fade

--- a/themes/base/jquery.ui.tooltip.css
+++ b/themes/base/jquery.ui.tooltip.css
@@ -7,4 +7,7 @@
 	-webkit-box-shadow: 0 0 5px #aaa;
 	box-shadow: 0 0 5px #aaa;
 }
+* html .ui-tooltip {
+	background-image: none;
+}
 body .ui-tooltip { border-width:2px; }
